...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="Password"
...
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="157dp"
        android:layout_height="45dp"
        android:background="@drawable/button"
        android:text="Login"
        android:textSize="20sp"
        android:textColor="@color/aqua"
        android:fontFamily="@font/robotolight"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/robotolight"
        android:text="Need to "
        android:textColor="@color/navy"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/robotolight"
        android:text="register?"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView" />
...
